--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "eslint . && prettier --write . && tsc && vite build",
-    "prepare": "husky"
+    "prepare": "husky && husky install"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
-    "eslint": "^9.11.0",
-    "husky": "^9.1.0",
+    "eslint": "^9.12.0",
+    "husky": "^8.0.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.0",
     "vite": "^5.4.0"
   }
