--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ES2020",              
-    "lib": ["ES2020", "DOM"],       
-    "moduleResolution": "node",     
-    "outDir": "dist",             
-    "rootDir": "src",             
-    "esModuleInterop": true,       
-    "forceConsistentCasingInFileNames": true,
+    "module": "ES2020",
+    "outDir": "public",
+    "rootDir": "src",
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true
   },
   "include": ["src"]
